Updated template file

--- a/Tomovski_Template.html
+++ b/Tomovski_Template.html
@@ -20,7 +20,7 @@ Tested:
 
         <title>About Me/Educator Credentials</title>
 
-
+        <h1>Stefan Tomovski's Template</h1>
 
     </head>
     <body>
