--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@ Developed:
 
 Tested: 
 -->
+        <link rel="stylesheet" href="style.css">
         <meta charset="utf-8">
         <title>Home Page - Stefan's Career Portfolio</title>
 
