--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@ Developed:
 Tested: 
 -->
         <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="nav.css">
         <meta charset="utf-8">
         <title>Home Page - Stefan's Career Portfolio</title>
 
@@ -24,6 +25,13 @@ Tested:
 
     </head>
     <body>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="#projects.html">Projects</a></li>
+            </ul>
+        </nav>
 
         <header>
             <h1> Welcome to my career portfolio!</h1>
