--- a/index.html
+++ b/index.html
@@ -55,6 +55,8 @@ Tested:
         projects I have completed. I will also use the website to list job experience and how it has influenced my
         problem-solving skills and all-around critical thinking.</p>
 
+            <a href="STResume.pdf" class ="resume-link">Click Here to View my Resume</a>
+
         </main>
 
         <footer>
