Added resume to correct page

--- a/about.html
+++ b/about.html
@@ -16,12 +16,20 @@ Developed:
 
 Tested: 
 -->
+        <link rel="stylesheet" href="nav.css">
+        <link rel="stylesheet" href="style.css">
         <meta charset="utf-8">
         <title>Home Page - Stefan's Career Portfolio</title>
 
 
     </head>
-
+    <nav>
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="#projects.html">Projects</a></li>
+        </ul>
+    </nav>
     <header>
         <h1>Stefan Tomovski</h1>
     </header>
@@ -29,7 +37,6 @@ Tested:
     <h2>About Me</h2>
     <body>
         <main><a href="STResume.pdf" class ="resume-link">Click Here to View my Resume</a></main>
-        
             <p>        My name is <strong>Stefan Tomovski</strong>, I am currently a senior in information technology. I am currently
                 attaining my <strong>Bachelor of Science in Information Technology at the University of Missouri</strong>. I am also
                 achieving my web development certificate along with my cybersecurity certificate and my digital media
