Created Drop Down

--- a/project.html
+++ b/project.html
@@ -16,6 +16,8 @@ Developed:
 
 Tested: 
 -->
+        <link rel="stylesheet" href="nav.css">
+
         <meta charset="utf-8">
 
         <title>About Me/Educator Credentials</title>
@@ -23,7 +25,22 @@ Tested:
         <h1>Stefan Tomovski's Template</h1>
 
     </head>
+    <nav>
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="about.html">About</a></li>
+            <li class="dropdown">
+                <a href="#">Projects/Learn</a>
+                <ul class="dropdowncontent">
+                    <li><a href="#">Link 1</a></li>
+                    <li><a href="#">Link 2</a></li>
+                    <li><a href="#">Link 3</a></li>
+                </ul>
+            </li>
+        </ul>
+    </nav>
     <body>
+
         <p> Welcome to my education overview! My name is Stefan Tomovski, and I will be going over my
             educational and career portfolio which will be outlining the experiences that have made me
             comfortable solving and discussing IT related issues. The purpose of this website will be to describe my
