--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ Tested:
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
-                <li><a href="#projects.html">Projects</a></li>
+                <li><a href="projects.html">Projects</a></li>
             </ul>
         </nav>
 
