Fixed Placed projects.html header underneath nav

--- a/project.html
+++ b/project.html
@@ -17,12 +17,12 @@ Developed:
 Tested: 
 -->
         <link rel="stylesheet" href="nav.css">
+        <link rel="stylesheet" href="style.css">
 
         <meta charset="utf-8">
 
         <title>About Me/Educator Credentials</title>
 
-        <h1>Stefan Tomovski's Template</h1>
 
     </head>
     <nav>
@@ -39,6 +39,7 @@ Tested:
             </li>
         </ul>
     </nav>
+    <h1>Stefan Tomovski's Template</h1>
     <body>
 
         <p> Welcome to my education overview! My name is Stefan Tomovski, and I will be going over my
