--- a/about.html
+++ b/about.html
@@ -28,6 +28,7 @@ Tested:
             <li><a href="index.html">Home</a></li>
             <li><a href="about.html">About</a></li>
             <li><a href="project.html">Projects</a></li>
+            <li><a href="reflection.html">Reflection</a></li>
         </ul>
     </nav>
     <header>
@@ -49,15 +50,15 @@ Tested:
                 cybersecurity. As Information Technology is a very broad field of study, my specific interest is
                 <em>cybersecurity</em>.
             </p>
-            <blockquote cite="https://blog.hubspot.com/sales/famous-quotes"><p>Darkness cannot drive out darkness: only <em>light</em> can do that. 
-                Hate cannot drive out hate: only <em>love</em> can do that.</p>
+            <blockquote cite="https://blog.hubspot.com/sales/famous-quotes">Darkness cannot drive out darkness: only <em>light</em> can do that. 
+                Hate cannot drive out hate: only <em>love</em> can do that.
                 <footer>-Martin Luther King Jr.<cite>Hubspot</cite></footer>
             </blockquote>
             
             <footer>
-                <p>Author: Stefan Tomovski</p>
-                <p>Email: tomovskis@missouri.edu</p> 
-                <p>&copy; 2024 Stefan Tomovski. All rights reserved.</p>
+                <div>Author: Stefan Tomovski</div>
+                <div>Email: tomovskis@missouri.edu</div>
+                <div>&copy; 2024 Stefan Tomovski. All rights reserved.</div>
             </footer>
 
     </body>
