--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@ Tested:
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="project.html">Projects</a></li>
+                <li><a href="reflection.html">Reflection</a></li>
             </ul>
         </nav>
 
@@ -57,9 +58,9 @@ Tested:
         </main>
 
         <footer>
-            <p>Author: Stefan Tomovski</p>
-            <p>Email: tomovskis@missouri.edu</p> 
-            <p>&copy; 2024 Stefan Tomovski. All rights reserved.</p>
+            <div>Author: Stefan Tomovski</div>
+            <div>Email: tomovskis@missouri.edu</div>
+            <div>&copy; 2024 Stefan Tomovski. All rights reserved.</div>
         </footer>
 
     </body>
