--- a/project.html
+++ b/project.html
@@ -30,13 +30,14 @@ Tested:
             <li><a href="index.html">Home</a></li>
             <li><a href="about.html">About</a></li>
             <li class="dropdown">
-                <a href="#">Projects/Learn</a>
+                <a href="#">Projects</a>
                 <ul class="dropdowncontent">
                     <li><a href="#">Link 1</a></li>
                     <li><a href="#">Link 2</a></li>
                     <li><a href="#">Link 3</a></li>
                 </ul>
             </li>
+            <li><a href="reflection.html">Reflection</a></li>
         </ul>
     </nav>
     <h1>Stefan Tomovski's Template</h1>
@@ -68,9 +69,9 @@ Tested:
         </blockquote>
 
         <footer>
-            <p>Author: Stefan Tomovski</p>
-            <p>Email: tomovskis@missouri.edu</p> 
-            <p>&copy; 2024 Stefan Tomovski. All rights reserved.</p>
+            <div>Author: Stefan Tomovski</div>
+            <div>Email: tomovskis@missouri.edu</div>
+            <div>&copy; 2024 Stefan Tomovski. All rights reserved.</div>
         </footer>
 
     </body>
