--- a/about.html
+++ b/about.html
@@ -27,8 +27,16 @@ Tested:
         <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="about.html">About</a></li>
-            <li><a href="project.html">Projects</a></li>
+            <li class="dropdown">
+                <a href="#projects.html">Projects</a>
+                <ul class="dropdowncontent">
+                    <li><a href="#">Link 1</a></li>
+                    <li><a href="#">Link 2</a></li>
+                    <li><a href="#">Link 3</a></li>
+                </ul>
+            </li>
             <li><a href="reflection.html">Reflection</a></li>
+            <li><a href="#contact.html">Contact</a></li>
         </ul>
     </nav>
     <header>
