--- a/project.html
+++ b/project.html
@@ -30,7 +30,7 @@ Tested:
             <li><a href="index.html">Home</a></li>
             <li><a href="about.html">About</a></li>
             <li class="dropdown">
-                <a href="#">Projects</a>
+                <a href="#projects.html">Projects</a>
                 <ul class="dropdowncontent">
                     <li><a href="#">Link 1</a></li>
                     <li><a href="#">Link 2</a></li>
@@ -38,9 +38,10 @@ Tested:
                 </ul>
             </li>
             <li><a href="reflection.html">Reflection</a></li>
+            <li><a href="#contact.html">Contact</a></li>
         </ul>
     </nav>
-    <h1>Stefan Tomovski's Template</h1>
+    <h1>Stefan Tomovski's Project Page</h1>
     <body>
 
         <p> Welcome to my education overview! My name is Stefan Tomovski, and I will be going over my
