Updated comment headers

--- a/index.html
+++ b/index.html
@@ -6,15 +6,15 @@
         <!--
 Title: Project 2 - Home Page
 
-Use: 
+Use: For introduction to my professional portfolio.
 
 Author: Stefan Tomovski
 
 School/Term: University of Missouri 2024
 
-Developed:
+Developed:3/9/2024
 
-Tested: 
+Tested: 3/9/2024
 -->
         <link rel="stylesheet" href="style.css">
         <link rel="stylesheet" href="nav.css">
