--- a/project.html
+++ b/project.html
@@ -6,15 +6,15 @@
         <!--
 Title:
 
-Use: 
+Use: To show projects that I have done throughout my career and educational experience.
 
 Author: Stefan Tomovski
 
 School/Term: University of Missouri 2024
 
-Developed:
+Developed: 3/9/2024
 
-Tested: 
+Tested: 3/9/2024
 -->
         <link rel="stylesheet" href="nav.css">
         <link rel="stylesheet" href="style.css">
