--- a/reflection.html
+++ b/reflection.html
@@ -6,7 +6,7 @@
         <!--
 Title: Project 2 - Reflection Page
 
-Use: 
+Use: Reflection Page for showing what I have learned throughout my career experience.
 
 Author: Stefan Tomovski
 
@@ -14,7 +14,7 @@ School/Term: University of Missouri 2024
 
 Developed: 3/9/2024
 
-Tested: 
+Tested: 3/9/2024
 -->
         <link rel="stylesheet" href="style.css">
         <link rel="stylesheet" href="nav.css">
