--- a/about.html
+++ b/about.html
@@ -6,15 +6,15 @@
         <!--
 Title: Project 2 - Home Page
 
-Use: 
+Use: To show viewers what my career and educational experience was like and go more in depth about who I am.
 
 Author: Stefan Tomovski
 
 School/Term: University of Missouri 2024
 
-Developed:
+Developed: 3/9/2024
 
-Tested: 
+Tested: 3/9/2024
 -->
         <link rel="stylesheet" href="nav.css">
         <link rel="stylesheet" href="style.css">
