Updated Styling, Flexbox, Colors, Layout, Added Photo

--- a/project.html
+++ b/project.html
@@ -20,7 +20,7 @@ Tested: 3/9/2024
         <link rel="stylesheet" href="style.css">
 
         <meta charset="utf-8">
-
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>About Me/Educator Credentials</title>
 
 
@@ -64,8 +64,8 @@ Tested: 3/9/2024
             <em>cybersecurity</em>.
         </p>
 
-        <blockquote cite="https://blog.hubspot.com/sales/famous-quotes"><p>Darkness cannot drive out darkness: only <em>light</em> can do that. 
-            Hate cannot drive out hate: only <em>love</em> can do that.</p>
+        <blockquote  cite="https://blog.hubspot.com/sales/famous-quotes"><p>Darkness cannot drive out darkness: only light can do that. 
+            Hate cannot drive out hate: only love can do that.</p>
             <footer>-Martin Luther King Jr.<cite>Hubspot</cite></footer>
         </blockquote>
 
