--- a/reflection.html
+++ b/reflection.html
@@ -19,6 +19,7 @@ Tested: 3/9/2024
         <link rel="stylesheet" href="style.css">
         <link rel="stylesheet" href="nav.css">
         <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Reflection Page - Stefan's Career Portfolio</title>
 
 
@@ -47,12 +48,11 @@ Tested: 3/9/2024
         </header>
 
 
-        <main>
 
         <h2>Reflection</h2>
 
         <article>
-
+        <main class="main-content">
             <p href="content">The internship has contributed to my long-term goals in many ways, most importantly in giving
             me the experience in working in customer service with users that have limited technological skills. The
             ability to be able to explain and communicate information in an easy-to-understand fashion is a
@@ -86,6 +86,7 @@ Tested: 3/9/2024
             the field of technology have started out with an entry level support job and worked their way up after
             learning the necessary skills. I believe that this job combined with my school experience has taught me
             the required technical skills about hardware and software that will be beneficial in cybersecurity. </p>
+        </main>
 
         </article>
 
