--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@ Tested: 3/9/2024
         <link rel="stylesheet" href="style.css">
         <link rel="stylesheet" href="nav.css">
         <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Home Page - Stefan's Career Portfolio</title>
 
 
@@ -26,6 +27,7 @@ Tested: 3/9/2024
     </head>
     <body>
         <nav>
+            <div class="hamburger">&#9776;</div>
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
@@ -46,7 +48,6 @@ Tested: 3/9/2024
         </header>
 
 
-        <main>
 
         <h2>About Me</h2>
 
@@ -56,13 +57,14 @@ Tested: 3/9/2024
         resume, work experience, career experience, and my skills in a visual appealing style where the
         audience will be able to view my professional portfolio in a positive light.</p>
         
+        <h2>Goals and Objectives</h2>
+
         <p>The goal of this website is to be accessible on my GitHub and give potential employers an easily digestible format of my resume and
         career/education experiences. GitHub is a useful website where code is posted, employers commonly
         look at websites such as this to see that a potential candidate has the skills they are looking for. The
         objective of this website would be to inform readers about my competencies and the way they align with
         projects I have completed. I will also use the website to list job experience and how it has influenced my
         problem-solving skills and all-around critical thinking.</p>
-        </main>
 
         <footer>
             <div>Author: Stefan Tomovski</div>
