Fixed Nav Bar, Updated Project for Activity 6

--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
 
     <head>
         <!--
-Title: Project 2 - Home Page
+Title: Project 2 - About Page
 
 Use: To show viewers what my career and educational experience was like and go more in depth about who I am.
 
@@ -20,15 +20,16 @@ Tested: 3/9/2024
         <link rel="stylesheet" href="style.css">
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Home Page - Stefan's Career Portfolio</title>
+        <title>About Page - Stefan's Career Portfolio</title>
     </head>
 
     <nav>
+        <div class="hamburger">&#9776;</div>
         <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="about.html">About</a></li>
             <li class="dropdown">
-                <a href="#projects.html">Projects</a>
+                <a href="projects.html">Projects</a>
                 <ul class="dropdowncontent">
                     <li><a href="#">Link 1</a></li>
                     <li><a href="#">Link 2</a></li>
@@ -36,23 +37,21 @@ Tested: 3/9/2024
                 </ul>
             </li>
             <li><a href="reflection.html">Reflection</a></li>
-            <li><a href="#contact.html">Contact</a></li>
+            <li><a href="contact.html">Contact</a></li>
         </ul>
     </nav>
 
-    <header>
         <h1>Stefan Tomovski</h1>
-    </header>
 
+    <body>
     <h2 class="headercenter">About Me</h2>
 
     <div class="flex-container">
         <div class="headshot">
             <img src="ProfessionalHeadshot.PNG" alt="Stefan Tomovski">
-        
     </div>
 
-    <body>
+
             <p class="flex-container">My name is Stefan Tomovski, I am currently a senior in information technology. I am currently
                 attaining my Bachelor of Science in Information Technology at the University of Missouri. I am also
                 achieving my web development certificate along with my cybersecurity certificate and my digital media
