--- a/index.html
+++ b/index.html
@@ -21,18 +21,16 @@ Tested: 3/9/2024
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Home Page - Stefan's Career Portfolio</title>
-
-
-
     </head>
-    <body>
+
+
         <nav>
             <div class="hamburger">&#9776;</div>
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
                 <li class="dropdown">
-                    <a href="#projects.html">Projects</a>
+                    <a href="projects.html">Projects</a>
                     <ul class="dropdowncontent">
                         <li><a href="#">Link 1</a></li>
                         <li><a href="#">Link 2</a></li>
@@ -40,37 +38,39 @@ Tested: 3/9/2024
                     </ul>
                 </li>
                 <li><a href="reflection.html">Reflection</a></li>
-                <li><a href="#contact.html">Contact</a></li>
+                <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
-        <header>
-            <h1> Welcome to my career portfolio!</h1>
-        </header>
 
+
+            <h1>    Welcome to my career portfolio!</h1>
+
+
+    <body>
 
 
         <h2>About Me</h2>
 
-        <p> Welcome to my career portfolio! My name is Stefan Tomovski, and I will be going over my
+        <p>        Welcome to my career portfolio! My name is Stefan Tomovski, and I will be going over my
         educational and career portfolio which will be outlining the experiences that have made me
         comfortable solving and discussing IT related issues. The purpose of this website will be to describe my
         resume, work experience, career experience, and my skills in a visual appealing style where the
         audience will be able to view my professional portfolio in a positive light.</p>
         
-        <h2>Goals and Objectives</h2>
+        <h2> Goals and Objectives</h2>
 
-        <p>The goal of this website is to be accessible on my GitHub and give potential employers an easily digestible format of my resume and
+        <p>    The goal of this website is to be accessible on my GitHub and give potential employers an easily digestible format of my resume and
         career/education experiences. GitHub is a useful website where code is posted, employers commonly
         look at websites such as this to see that a potential candidate has the skills they are looking for. The
         objective of this website would be to inform readers about my competencies and the way they align with
         projects I have completed. I will also use the website to list job experience and how it has influenced my
         problem-solving skills and all-around critical thinking.</p>
-
-        <footer>
-            <div>Author: Stefan Tomovski</div>
-            <div>Email: tomovskis@missouri.edu</div>
-            <div>&copy; 2024 Stefan Tomovski. All rights reserved.</div>
-        </footer>
-
     </body>
+
+    <footer>
+        <div>Author: Stefan Tomovski</div>
+        <div>Email: tomovskis@missouri.edu</div>
+        <div>&copy; 2024 Stefan Tomovski. All rights reserved.</div>
+    </footer>
+
 </html>
