--- a/projects.html
+++ b/projects.html
@@ -21,16 +21,17 @@ Tested: 3/9/2024
 
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>About Me/Educator Credentials</title>
+        <title>Projects Page - Stefan's Career Portfolio</title>
 
 
     </head>
     <nav>
+        <div class="hamburger">&#9776;</div>
         <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="about.html">About</a></li>
             <li class="dropdown">
-                <a href="#projects.html">Projects</a>
+                <a href="projects.html">Projects</a>
                 <ul class="dropdowncontent">
                     <li><a href="#">Link 1</a></li>
                     <li><a href="#">Link 2</a></li>
@@ -38,10 +39,10 @@ Tested: 3/9/2024
                 </ul>
             </li>
             <li><a href="reflection.html">Reflection</a></li>
-            <li><a href="#contact.html">Contact</a></li>
+            <li><a href="contact.html">Contact</a></li>
         </ul>
     </nav>
-    <h1>Stefan Tomovski's Project Page</h1>
+    <h1>Stefan Tomovski's Projects Page</h1>
     <body>
 
         <p> Welcome to my education overview! My name is Stefan Tomovski, and I will be going over my
@@ -64,10 +65,6 @@ Tested: 3/9/2024
             <em>cybersecurity</em>.
         </p>
 
-        <blockquote  cite="https://blog.hubspot.com/sales/famous-quotes"><p>Darkness cannot drive out darkness: only light can do that. 
-            Hate cannot drive out hate: only love can do that.</p>
-            <footer>-Martin Luther King Jr.<cite>Hubspot</cite></footer>
-        </blockquote>
 
         <footer>
             <div>Author: Stefan Tomovski</div>
