--- a/reflection.html
+++ b/reflection.html
@@ -25,29 +25,29 @@ Tested: 3/9/2024
 
 
     </head>
-    <body>
-        <nav>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">About</a></li>
-                <li class="dropdown">
-                    <a href="#projects.html">Projects</a>
-                    <ul class="dropdowncontent">
-                        <li><a href="#">Link 1</a></li>
-                        <li><a href="#">Link 2</a></li>
-                        <li><a href="#">Link 3</a></li>
-                    </ul>
-                </li>
-                <li><a href="reflection.html">Reflection</a></li>
-                <li><a href="#contact.html">Contact</a></li>
-            </ul>
-        </nav>
+    <nav>
+        <div class="hamburger">&#9776;</div>
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="about.html">About</a></li>
+            <li class="dropdown">
+                <a href="projects.html">Projects</a>
+                <ul class="dropdowncontent">
+                    <li><a href="#">Link 1</a></li>
+                    <li><a href="#">Link 2</a></li>
+                    <li><a href="#">Link 3</a></li>
+                </ul>
+            </li>
+            <li><a href="reflection.html">Reflection</a></li>
+            <li><a href="contact.html">Contact</a></li>
+        </ul>
+    </nav>
 
-        <header>
+
             <h1> Welcome to my Reflection Page!</h1>
-        </header>
 
 
+        <body>
 
         <h2>Reflection</h2>
 
