--- a/contact.html
+++ b/contact.html
@@ -18,6 +18,7 @@ Tested: 4/3/2024
 -->
         <link rel="stylesheet" href="nav.css">
         <link rel="stylesheet" href="style.css">
+        <link rel="icon" href="favicon.png" type="image/png">
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Contact Page - Stefan's Career Portfolio</title>
@@ -44,24 +45,30 @@ Tested: 4/3/2024
 
     <div class="flex-container">
         <div class="headshot">
-            <img src="ProfessionalHeadshot.PNG" alt="Stefan Tomovski">
+            <img class="imgshadow" src="ProfessionalHeadshot.PNG" alt="Stefan Tomovski">
         
     </div>
   
     <body>
-            <p class="flex-container">My name is Stefan Tomovski,
-            </p>
+
+
+
         </div>
         </body>
+
         <div class="headercenter">
             <a href="STResume.pdf" class ="resume-link">Click Here to View my Resume</a>
         </div>
 
-
-            <footer>
+        <footer>
+            <div class="footer-left">&copy; 2024 Stefan Tomovski. All rights reserved.</div>
+            <div class="footer-contact">
                 <div>Author: Stefan Tomovski</div>
-                <div>Email: tomovskis@missouri.edu</div>
-                <div>&copy; 2024 Stefan Tomovski. All rights reserved.</div>
-            </footer>
+                <img src="email-icon.png" alt="Email Icon" style="width:20px; height:auto;">
+                <a href="mailto:tomovski@missouri.edu"> tomovski@missouri.edu</a>
+                <img src="phone-icon.png" alt="Phone Icon" style="width:20px; height:auto;">
+                <span> 1+888-888-8888</span> 
+            </div>
+        </footer>
 
 </html>
