--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@ Tested: 3/9/2024
 -->
         <link rel="stylesheet" href="style.css">
         <link rel="stylesheet" href="nav.css">
+        <link rel="icon" href="favicon.png" type="image/png">
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Home Page - Stefan's Career Portfolio</title>
@@ -48,7 +49,7 @@ Tested: 3/9/2024
 
     <body>
 
-
+        <div class="content-wrap">
         <h2>About Me</h2>
 
         <p>        Welcome to my career portfolio! My name is Stefan Tomovski, and I will be going over my
@@ -65,12 +66,19 @@ Tested: 3/9/2024
         objective of this website would be to inform readers about my competencies and the way they align with
         projects I have completed. I will also use the website to list job experience and how it has influenced my
         problem-solving skills and all-around critical thinking.</p>
-    </body>
 
+    </body>
+    </div>
     <footer>
-        <div>Author: Stefan Tomovski</div>
-        <div>Email: tomovskis@missouri.edu</div>
-        <div>&copy; 2024 Stefan Tomovski. All rights reserved.</div>
+        <div class="footer-left">&copy; 2024 Stefan Tomovski. All rights reserved.</div>
+        <div class="footer-contact">
+            <div>Author: Stefan Tomovski</div>
+            <img src="email-icon.png" alt="Email Icon" style="width:20px; height:auto;">
+            <a href="mailto:tomovski@missouri.edu"> tomovski@missouri.edu</a>
+            <img src="phone-icon.png" alt="Phone Icon" style="width:20px; height:auto;">
+            <span> 1+888-888-8888</span> 
+        </div>
     </footer>
+
 
 </html>
