--- a/projects.html
+++ b/projects.html
@@ -16,8 +16,9 @@ Developed: 3/9/2024
 
 Tested: 3/9/2024
 -->
-        <link rel="stylesheet" href="nav.css">
         <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="nav.css">
+        <link rel="icon" href="favicon.png" type="image/png">
 
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -25,6 +26,7 @@ Tested: 3/9/2024
 
 
     </head>
+    
     <nav>
         <div class="hamburger">&#9776;</div>
         <ul>
@@ -42,8 +44,11 @@ Tested: 3/9/2024
             <li><a href="contact.html">Contact</a></li>
         </ul>
     </nav>
-    <h1>Stefan Tomovski's Projects Page</h1>
     <body>
+        <div class="content-wrap">
+
+        <h1>Stefan Tomovski's Projects Page</h1>
+
 
         <p> Welcome to my education overview! My name is Stefan Tomovski, and I will be going over my
             educational and career portfolio which will be outlining the experiences that have made me
@@ -64,13 +69,18 @@ Tested: 3/9/2024
             cybersecurity. As Information Technology is a very broad field of study, my specific interest is
             <em>cybersecurity</em>.
         </p>
-
-
-        <footer>
-            <div>Author: Stefan Tomovski</div>
-            <div>Email: tomovskis@missouri.edu</div>
-            <div>&copy; 2024 Stefan Tomovski. All rights reserved.</div>
-        </footer>
-
+        </div>
     </body>
+
+    <footer>
+        <div class="footer-left">&copy; 2024 Stefan Tomovski. All rights reserved.</div>
+        <div class="footer-contact">
+            <div>Author: Stefan Tomovski</div>
+            <img src="email-icon.png" alt="Email Icon" style="width:20px; height:auto;">
+            <a href="mailto:tomovski@missouri.edu"> tomovski@missouri.edu</a>
+            <img src="phone-icon.png" alt="Phone Icon" style="width:20px; height:auto;">
+            <span> 1+888-888-8888</span> 
+        </div>
+    </footer>
+
 </html>
