--- a/reflection.html
+++ b/reflection.html
@@ -18,6 +18,7 @@ Tested: 3/9/2024
 -->
         <link rel="stylesheet" href="style.css">
         <link rel="stylesheet" href="nav.css">
+        <link rel="icon" href="favicon.png" type="image/png">
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Reflection Page - Stefan's Career Portfolio</title>
@@ -48,7 +49,7 @@ Tested: 3/9/2024
 
 
         <body>
-
+        <div class="content-wrap">
         <h2>Reflection</h2>
 
         <article>
@@ -89,12 +90,18 @@ Tested: 3/9/2024
         </main>
 
         </article>
-
-        <footer>
+    </div>
+    <footer>
+        <div class="footer-left">&copy; 2024 Stefan Tomovski. All rights reserved.</div>
+        <div class="footer-contact">
             <div>Author: Stefan Tomovski</div>
-            <div>Email: tomovskis@missouri.edu</div>
-            <div>&copy; 2024 Stefan Tomovski. All rights reserved.</div>
-        </footer>
+            <img src="email-icon.png" alt="Email Icon" style="width:20px; height:auto;">
+            <a href="mailto:tomovski@missouri.edu"> tomovski@missouri.edu</a>
+            <img src="phone-icon.png" alt="Phone Icon" style="width:20px; height:auto;">
+            <span> 1+888-888-8888</span> 
+        </div>
+    </footer>
+
 
     </body>
 </html>
