--- a/contact.html
+++ b/contact.html
@@ -51,7 +51,11 @@ Tested: 4/3/2024
   
     <body>
 
-
+        <p class="contact-info">
+            <strong>Email:</strong> <a href="mailto:example@example.com">tomovski@missouri.edu</a><br>
+            <strong>Phone:</strong> <a href="tel:1+888-888-8888">1+888-888-8888</a><br>
+            <strong>Address:</strong>  Columbia, Missouri
+        </p>
 
         </div>
         </body>
