--- a/about.html
+++ b/about.html
@@ -51,7 +51,10 @@ Tested: 3/9/2024
 
         <div class="flex-container">
         <div class="headshot">
-            <img class="imgshadow" src="ProfessionalHeadshot.PNG" alt="Stefan Tomovski">
+            <video controls>
+                <source src="video-resume.mp4" type="video/mp4">
+                Your browser does not support the video tag.
+            </video>
         </div>
 
 
