--- a/projects.html
+++ b/projects.html
@@ -45,31 +45,51 @@ Tested: 3/9/2024
         </ul>
     </nav>
     <body>
-        <div class="content-wrap">
 
         <h1>Stefan Tomovski's Projects Page</h1>
 
-
-        <p> Welcome to my education overview! My name is Stefan Tomovski, and I will be going over my
-            educational and career portfolio which will be outlining the experiences that have made me
-            comfortable solving and discussing IT related issues. The purpose of this website will be to describe my
-            resume, work experience, career experience, and my skills in a visual appealing style where the
-            audience will be able to view my professional portfolio in a positive light.</p>
-
-
-        <p>        My name is <strong>Stefan Tomovski</strong>, I am currently a senior in information technology. I am currently
-            attaining my <strong>Bachelor of Science in Information Technology at the University of Missouri</strong>. I am also
-            achieving my web development certificate along with my cybersecurity certificate and my digital media
-            design certificate. I needed work experience so in my sophomore year I picked up an IT
-            support/technician student job at the <em>University of Missouri’s School of Medicine</em>.  <br>The job and the
-            experience I have attained while working there have been enlightening in teaching me what the future
-            of information technology may hold. In high school I didn’t have much of an idea what I was going to do
-            for school, so I went into IT, and it turned out to be a perfect fit where I have passion. A goal I have to
-            complete by the end of this summer is to attain my CompTIA certification for networking and
-            cybersecurity. As Information Technology is a very broad field of study, my specific interest is
-            <em>cybersecurity</em>.
-        </p>
+        <div class="projects-container">
+            <div class="project-item">
+                <img src="Picture1.png" alt="Project Image 1">
+                <p>For my projects I decided to go with the learning technologies portfolio where we list competencies and align a project with how we demonstrated those competencies. A competency I have that 
+                    has been proved by working together with groups is communication. Using effective communication, I have collaborated with a group to create software that allows a user to interact with and 
+                    analyze a stock chart. We met with a group once a week and cooperated to get this project completed. Throughout this project we worked with software such as python, docker, GitHub, and even
+                     html. Our group didn’t have any issues with communicating over text, email, and discord. The artifact I chose was a screenshot of the files posted to my GitHub. All the files in that screenshot
+                      are linked to each other and are necessary tools for the stock visualizer to function. Overall, it was a great learning experience cooperating with my group to get this project completed.</p>
+            </div>
+            <div class="project-item">
+                <img src="Picture2.png" alt="Project Image 2" id="resize">
+                <p>The next competency I would like to align a project with was when we demonstrated teamwork. The project I worked on with a team was at my internship for the School of Medicine, we moved the 
+                    entire department’s equipment across the building. This project demonstrated the competency of problem solving. This included the labeling a disassembling of around 20-30 people’s workstations, 
+                    the physical movement of, and the setting up of a bunch of setups. Typically, it would take 2-3 days to move the department but due to our problem-solving skills, speed, and responsiveness it 
+                    only took a morning. During the move, we encountered some issues such as ports not being properly hooked up, so we had to go into the networking closet and hook them up ourselves. The artifact
+                     linked is a photo of my coworker Tom hooking up the correct port so a user could get internet. Overall, our team was very quick, resourceful, and responsive so the project went very smoothly
+                      with only a few hiccups.</p>
+            </div>
+            <div class="project-item">
+                <img src="Picture3.png" alt="Project Image 3">
+                <p>The next large project I would like to mention was when a department ordered 20 brand new laptops for new users and employees. This project demonstrated the competency of 
+                    organization and time management. When the equipment arrived it needed to be added to the inventory system that we use to track equipment, and the equipment also needed to be added
+                     to active directory that allows and controls what security permissions the device has access to utilize. After each laptop is added by serial number, the laptops must be imaged
+                      individually to have the University of Missouri attributes and software you see on university owned equipment. Imaging a device is a simple process that entails plugging in a drive 
+                      with the image, signing into your admin credential account, and letting it upload so the device can be a blank slate with university attributes. Each laptop takes an hour to download
+                       the image then requires an additional few hours to load software and configure group police updates. The artifact I included was boxes of all the devices that had to be set up. The project
+                        took about a week to complete and no hinderances occurred other than when devices would inconsistently fall off the whitelist requiring my coworker to whitelist the IP address. Overall,
+                         the project was successful, everything was done very quickly, and all devices were correctly labeled and imaged, which demonstrates time management.</p>
+            </div>
+            <div class="project-item">
+                <img src="Picture4.PNG" alt="Project Image 4">
+                <p>Finally the last project I would like to talk about is the project I worked on for my senior Capstone class. I worked together with 4 other group mates to create an application that allows
+                    upcoming freshman Mizzou students living in the dorms to select the dorm they will be moving into. Following their selection they will be promted with room styles where they will select the kind
+                    of room and have the ability to customize it with a large variety of furniture on top of the included layout. Our group made this project keeping in mind that many students are moving from out of town
+                    and will have poor foresight into the furniture they should bring due to spacial limitations of living in a dorm. This project demonstrated efficient communication and teamwork in order to accomplish a takes
+                    our group was given limited time and a budget to create an application that solves an issue. Our team worked efficiently together to create an application using free open source software that solved
+                    an ongoing issue at our University.
+                </p>
+            </div>
         </div>
+    
+
     </body>
 
     <footer>
