--- a/projects.html
+++ b/projects.html
@@ -59,15 +59,6 @@ Tested: 3/9/2024
             </div>
             <div class="project-item">
                 <img src="Picture2.png" alt="Project Image 2" id="resize">
-                <p>The next competency I would like to align a project with was when we demonstrated teamwork. The project I worked on with a team was at my internship for the School of Medicine, we moved the 
-                    entire department’s equipment across the building. This project demonstrated the competency of problem solving. This included the labeling a disassembling of around 20-30 people’s workstations, 
-                    the physical movement of, and the setting up of a bunch of setups. Typically, it would take 2-3 days to move the department but due to our problem-solving skills, speed, and responsiveness it 
-                    only took a morning. During the move, we encountered some issues such as ports not being properly hooked up, so we had to go into the networking closet and hook them up ourselves. The artifact
-                     linked is a photo of my coworker Tom hooking up the correct port so a user could get internet. Overall, our team was very quick, resourceful, and responsive so the project went very smoothly
-                      with only a few hiccups.</p>
-            </div>
-            <div class="project-item">
-                <img src="Picture3.png" alt="Project Image 3">
                 <p>The next large project I would like to mention was when a department ordered 20 brand new laptops for new users and employees. This project demonstrated the competency of 
                     organization and time management. When the equipment arrived it needed to be added to the inventory system that we use to track equipment, and the equipment also needed to be added
                      to active directory that allows and controls what security permissions the device has access to utilize. After each laptop is added by serial number, the laptops must be imaged
@@ -78,8 +69,18 @@ Tested: 3/9/2024
                          the project was successful, everything was done very quickly, and all devices were correctly labeled and imaged, which demonstrates time management.</p>
             </div>
             <div class="project-item">
+                <img src="Picture3.png" alt="Project Image 3">
+
+                         <p>The next competency I would like to align a project with was when we demonstrated teamwork. The project I worked on with a team was at my internship for the School of Medicine, we moved the 
+                            entire department’s equipment across the building. This project demonstrated the competency of problem solving. This included the labeling a disassembling of around 20-30 people’s workstations, 
+                            the physical movement of, and the setting up of a bunch of setups. Typically, it would take 2-3 days to move the department but due to our problem-solving skills, speed, and responsiveness it 
+                            only took a morning. During the move, we encountered some issues such as ports not being properly hooked up, so we had to go into the networking closet and hook them up ourselves. The artifact
+                             linked is a photo of my coworker Tom hooking up the correct port so a user could get internet. Overall, our team was very quick, resourceful, and responsive so the project went very smoothly
+                              with only a few hiccups.</p>
+            </div>
+            <div class="project-item">
                 <img src="Picture4.PNG" alt="Project Image 4">
-                <p>Finally the last project I would like to talk about is the project I worked on for my senior Capstone class. I worked together with 4 other group mates to create an application that allows
+                <p>Finally, the last project I would like to talk about is the project I worked on for my senior Capstone class. I worked together with 4 other group mates to create an application that allows
                     upcoming freshman Mizzou students living in the dorms to select the dorm they will be moving into. Following their selection they will be promted with room styles where they will select the kind
                     of room and have the ability to customize it with a large variety of furniture on top of the included layout. Our group made this project keeping in mind that many students are moving from out of town
                     and will have poor foresight into the furniture they should bring due to spacial limitations of living in a dorm. This project demonstrated efficient communication and teamwork in order to accomplish a takes
