--- a/reflection.html
+++ b/reflection.html
@@ -48,13 +48,12 @@ Tested: 3/9/2024
             <h1> Welcome to my Reflection Page!</h1>
 
 
-        <body>
         <div class="content-wrap">
         <h2>Reflection</h2>
 
-        <article>
+ 
         <main class="main-content">
-            <p href="content">The internship has contributed to my long-term goals in many ways, most importantly in giving
+            <p>The internship has contributed to my long-term goals in many ways, most importantly in giving
             me the experience in working in customer service with users that have limited technological skills. The
             ability to be able to explain and communicate information in an easy-to-understand fashion is a
             detrimental skill to many aspects of any career in leadership. Being able to communicate effectively is an
@@ -89,7 +88,7 @@ Tested: 3/9/2024
             the required technical skills about hardware and software that will be beneficial in cybersecurity. </p>
         </main>
 
-        </article>
+
     </div>
     <footer>
         <div class="footer-left">&copy; 2024 Stefan Tomovski. All rights reserved.</div>
@@ -102,6 +101,4 @@ Tested: 3/9/2024
         </div>
     </footer>
 
-
-    </body>
 </html>
