--- a/index.html
+++ b/index.html
@@ -69,10 +69,10 @@ Tested: 3/9/2024
     </div>
     <footer>
         <div class="footer-left">&copy; 2024 Stefan Tomovski. All rights reserved.</div>
+        <div class="footer-center">Author: Stefan Tomovski</div>
         <div class="footer-contact">
-            <div>Author: Stefan Tomovski</div>
             <img src="email-icon.png" alt="Email Icon" style="width:20px; height:auto;">
-            <a href="mailto:tomovski@missouri.edu"> tomovski@missouri.edu</a>
+            <a href="mailto:tomovski@missouri.edu">tomovski@missouri.edu</a>
             <img src="phone-icon.png" alt="Phone Icon" style="width:20px; height:auto;">
             <span> 1+888-888-8888</span> 
         </div>
